@@ -1,13 +1,15 @@
 package dev.langchain4j.model.chat;
 
-import dev.langchain4j.agent.tool.ToolSpecification;
+import dev.langchain4j.data.message.UserMessage;
 import dev.langchain4j.model.DisabledModelTest;
+import dev.langchain4j.model.chat.request.ChatRequest;
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
+import java.util.List;
 
 class DisabledChatLanguageModelTest extends DisabledModelTest<ChatLanguageModel> {
-    private ChatLanguageModel model = new DisabledChatLanguageModel();
+
+    private final ChatLanguageModel model = new DisabledChatLanguageModel();
 
     public DisabledChatLanguageModelTest() {
         super(ChatLanguageModel.class);
@@ -15,10 +17,10 @@ class DisabledChatLanguageModelTest extends DisabledModelTest<ChatLanguageModel>
 
     @Test
     void methodsShouldThrowException() {
-        performAssertion(() -> this.model.generate("Hello"));
-        performAssertion(this.model::generate);
-        performAssertion(() -> this.model.generate(Collections.emptyList()));
-        performAssertion(() -> this.model.generate(Collections.emptyList(), (ToolSpecification) null));
-        performAssertion(() -> this.model.generate(Collections.emptyList(), Collections.emptyList()));
+        UserMessage userMessage = UserMessage.from("Hello");
+        performAssertion(() -> model.chat(ChatRequest.builder().messages(userMessage).build()));
+        performAssertion(() -> model.chat(userMessage.singleText()));
+        performAssertion(() -> model.chat(userMessage));
+        performAssertion(() -> model.chat(List.of(userMessage)));
     }
 }
